--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -19,8 +19,8 @@
 .card, .Card{
   width: 250px;
   height: 400px;
-  background-color: darkblue;
-  opacity: 50%;
+background-color: darkblue;
+  /* opacity: 50%; */
   margin: 10px;
   border: 5px solid black;
   border-radius: 10px;
